# mobile_network_emulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json  tmp.rs
.github/workflows/: docker-image.yml  docker-publish.yml
mn_system/: Cargo.toml
mn_system/src/: application.rs  application_runtime.rs  edge_data_center.rs  main.rs  mobile_network_core.rs  mobile_network_core_endpoints.rs  mobile_network_exposure.rs  network.rs  network_endpoints.rs  pdu_session.rs  ran.rs  user.rs
mobile_network_core_event/: Cargo.toml
mobile_network_core_event/src/: lib.rs  mobile_network_core_event.rs
mobile_network_emulator/: Cargo.toml
mobile_network_emulator/src/: application.rs  application_runtime.rs  main..dot  main.rs  mobile_network_core..dot  mobile_network_core.rs  mobile_network_exposure.rs  mobile_network_exposure_endpoints.rs  network.rs  pdu_session.rs  user.rs
mobile_network_frontend/: Dockerfile  package-lock.json  package.json
mobile_network_frontend/.github/workflows/: docker-image.yml  docker-publish.yml
mobile_network_frontend/src/routes/: +page.svelte
mobile_network_orchestrator/: Cargo.toml
mobile_network_orchestrator/src/: main.rs
src/: application.rs  application_runtime.rs  edge_data_center.rs  main.rs  mobile_network.rs  mobile_network_core.rs  mobile_network_core_endpoints.rs  mobile_network_core_event.rs  mobile_network_exposure.rs  mobile_network_exposure_endpoints.rs  mobule_network_core_event.rs  network.rs  network_endpoints.rs  pdu_session.rs  ran.rs  subscription.rs  user.rs
subscriber/: Cargo.toml
subscriber/src/: main.rs
test_client/: application_locations.json  connected_users.py  data.json  fetch_data.py  fetch_locations.py  main.py  main_2.py  plot.py  requirements.txt  server.py
tokio_mpsc_test/: Cargo.toml
tokio_mpsc_test/src/: main.rs
