[package]
name = "mn_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.24.1"
geocoding = "0.4.0"
gpx = { version = "0.8.6", features = ["serde", "use-serde"] }
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
