[package]
name = "mn_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
geo = "0.24.1"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
