[package]
name = "mn_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
futures = "0.3.28"
geo = "0.25.0"
log = "0.4.17"
mongodb = "2.5.0"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
structopt = "0.3.26"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
mobile_network_core_event = {path = "../mobile_network_core_event"}
poisson-diskus = "1.0.0"
