[package]
name = "mobile_network_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
futures = "0.3.28"
geo = "0.26.0"
log = "0.4.20"
mongodb = "2.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
simple_logger = "4.2.0"
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
mobile_network_core_event = {path = "../mobile_network_core_event"}
poisson-diskus = "1.0.0"
