[package]
name = "mobile_network_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
futures = "0.3.30"
geo = "0.28.0"
log = "0.4.22"
mongodb = "3.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = "5.0.0"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
mobile_network_core_event = {path = "../mobile_network_core_event"}
poisson-diskus = "1.0.0"
