[package]
name = "mobile_network_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.25.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"] }
mobile_network_core_event = {path = "../mobile_network_core_event"}
mongodb = "2.5.0"
structopt = "0.3.26"
log = "0.4.17"
simple_logger = "4.1.0"
futures = "0.3.28"
rayon = "1.7.0"
