[package]
name = "mobile_network_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.26.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
mobile_network_core_event = {path = "../mobile_network_core_event"}
mongodb = "2.6.1"
structopt = "0.3.26"
log = "0.4.20"
simple_logger = "4.2.0"
futures = "0.3.28"
rayon = "1.7.0"
