[package]
name = "mobile_network_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.28.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
mobile_network_core_event = {path = "../mobile_network_core_event"}
mongodb = "3.1.0"
structopt = "0.3.26"
log = "0.4.22"
simple_logger = "5.0.0"
futures = "0.3.30"
rayon = "1.10.0"
