[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0.0"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
