[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["json", "cookies"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
